--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,15 @@
         }
     ],
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "psr/container": "^1.0"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^5.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "Melon\\Framework\\": "framework/src"
+        }
     }
 }
