--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.4",
-        "psr/container": "^1.0"
+        "symfony/console": "^5.1"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.1"
