--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "autoload": {
         "psr-4": {
+            "App\\": "app/",
             "Melon\\Framework\\": "framework/src"
         }
     }
