--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": "^7.4",
+        "ext-event": "*",
         "symfony/console": "^5.1"
     },
     "require-dev": {
@@ -21,5 +22,8 @@
             "App\\": "app/",
             "Melon\\Framework\\": "framework/src"
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
