--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,17 @@
     "require": {
         "php": "^7.4",
         "ext-event": "*",
+        "ext-sockets": "*",
         "symfony/console": "^5.1"
     },
     "require-dev": {
+        "paulxu-cn/event-ide-helper": "^0.1.0",
         "symfony/var-dumper": "^5.1"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Melon\\Framework\\": "framework/src"
+            "Melon\\": "framework/src"
         }
     },
     "config": {
