--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "symfony/console": "^6.0"
+        "symfony/console": "^6.0",
+        "symfony/routing": "^6.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^6.0"
