--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     ],
     "require": {
         "php": "^8.1",
+        "ext-fileinfo": "*",
         "symfony/console": "^6.0",
+        "symfony/finder": "^6.0",
+        "symfony/http-foundation": "^6.0",
         "symfony/routing": "^6.0"
     },
     "require-dev": {
