--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
         "psr-4": {
             "App\\": "app/",
             "Melon\\": "framework/src"
-        }
+        },
+        "files": [
+            "framework/src/helpers.php"
+        ]
     },
     "config": {
         "sort-packages": true
