--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^8.1",
         "ext-fileinfo": "*",
+        "monolog/monolog": "^2.3",
         "revolt/event-loop": "^0.2.2",
         "symfony/console": "^6.0",
         "symfony/finder": "^6.0",
