参考 laravel 更改框架目录结构

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
             "Melon\\": "framework/src"
         },
         "files": [
-            "framework/src/helpers.php"
+            "framework/src/Foundation/helpers.php"
         ]
     },
     "config": {
