--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "monolog/monolog": "^2.3",
         "revolt/event-loop": "^0.2.2",
         "symfony/console": "^6.0",
+        "symfony/dependency-injection": "^6.0",
         "symfony/finder": "^6.0",
         "symfony/http-kernel": "^6.0",
         "symfony/routing": "^6.0"
